<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/pewaktu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ten" />

    <TextView
        android:id="@+id/soale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cth_soal"
        android:textStyle="bold" />

    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/pil_a"
            android:text="@string/pil_a"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content"/>

        <Button android:id="@+id/pil_c"
            android:layout_weight="1"
            android:text="@string/pil_c"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/pil_b"
            android:text="@string/pil_b"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content"/>

        <Button android:id="@+id/pil_d"
            android:text="@string/pil_d"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>
