<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dif" />

        <RadioGroup
            android:id="@+id/dif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/mudah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/MUDAH" />

            <RadioButton
                android:id="@+id/sedang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SEDANG" />

            <RadioButton
                android:id="@+id/sulit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SULIT" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vol" />

        <SeekBar
            android:id="@+id/vol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />

    </LinearLayout>

</LinearLayout>